--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>緊急気象情報配信アカウント-ホームページ</title>
-        <link rel="stylesheet" href="css/style.css">        
+        <link rel=”stylesheet” href=”https://saigaikinkyuu.github.io/saigaikinkyuu6/style.css”/>        
     </head>
     <body>
         <header>
